# OpenGL

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/liuxin/opengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/egl/: EglThread.cpp  EglThread.h  Egl_Helper.cpp  Egl_Helper.h
app/src/main/cpp/log/: mylog.h
app/src/main/cpp/opengl/: BaseOpenGL.cpp  BaseOpenGL.h  OpenGLCommonFilter.cpp  OpenGLCommonFilter.h  OpenGLGreyFilter.cpp  OpenGLGreyFilter.h  OpenGLHelper.cpp  OpenGLHelper.h  OpenGLYUVFilter.cpp  OpenGLYUVFilter.h
app/src/main/cpp/util/: MatrixUtils.h  ShaderUtils.h
app/src/main/java/com/liuxin/opengl/: LxSurfaceView.java  MainActivity.java  OpenGlUtils.java  YUVPlayActivity.java
app/src/main/res/layout/: activity_main.xml  activtiy_yuvplay.xml
app/src/test/java/com/liuxin/opengl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
